# Checkpoint_9

attach_shelf/src/: approach_service_server.cpp  pre_approach.cpp  pre_approach_v2.cpp
my_components/: CMakeLists.txt  package.xml
my_components/include/my_components/: approach_service_server.hpp  attach_client.hpp  pre_approach.hpp  visibility_control.h
my_components/launch/: attach_to_shelf.launch.py
my_components/rviz/: show.rviz
my_components/src/: approach_service_server.cpp  attach_client.cpp  manual_composition.cpp  pre_approach.cpp
